infra/k8s-dev/auth-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: soccer-auth
        image: gcr.io/soccer-317809/soccer-auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3001 # port of the Service
      targetPort: 3001 # port of the container in the pod that matches the Service by labels
