infra/k8s-dev/soccerfield-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soccerfield-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soccerfield
  template:
    metadata:
      labels:
        app: soccerfield
    spec:
      containers:
        - name: soccer-soccerfield
          image: gcr.io/soccer-317809/soccer-soccerfield
---
apiVersion: v1
kind: Service
metadata:
  name: soccerfield-srv
spec:
  selector:
    app: soccerfield
  ports:
    - name: soccerfield
      protocol: TCP
      port: 3002 # port of the Service
      targetPort: 3002 # port of the container in the pod that matches the Service by labels
